correction mobile

--- a/themes/cael/style.css
+++ b/themes/cael/style.css
@@ -1009,7 +1009,8 @@ a:active {
 	color: #fff;
 }
 
-.accordion-menu .is-accordion-submenu-parent:not(.has-submenu-toggle)>a::after {
+/*accordion-menu .is-accordion-submenu-parent:not(.has-submenu-toggle)>a::after {*/
+.accordion-menu .is-accordion-submenu-parent >button::after {
 	display: inline-block;
 	position: relative;
 	right: -1rem;
@@ -1030,7 +1031,7 @@ a:active {
 	color: #fff;
 }
 
-.accordion-menu .submenu .is-accordion-submenu-parent>a::after {
+.accordion-menu .submenu .is-accordion-submenu-parent>button::after {
 	border-color: #fff transparent transparent;
 }
 
@@ -1450,7 +1451,6 @@ button.acces span.slide-top {
 .menus-footer {
 	background-color: var(--rose-fonce);
 	padding: 50px 1em;
-	padding-left: 150px;
 }
 
 .menus-footer nav {
@@ -1463,6 +1463,9 @@ button.acces span.slide-top {
 		border-right: solid 1px rgba(255, 255, 255, 0.5);
 		padding-left: 50px;
 	}
+	.menus-footer {
+		padding-left: 150px;
+	}
 }
 
 @media screen and (min-width:65em) {
@@ -1471,6 +1474,9 @@ button.acces span.slide-top {
 	}
 	.menus-footer nav:nth-of-type(2) {
 		border-right: solid 1px rgba(255, 255, 255, 0.5);
+		padding-left: 50px;
+	}
+	.grid-padding-x > .cell.menu-footer-social{
 		padding-left: 50px;
 	}
 }
@@ -1487,10 +1493,6 @@ button.acces span.slide-top {
 
 .menus-footer a {
 	padding: 0;
-}
-
-.grid-padding-x > .cell.menu-footer-social{
-	padding-left: 50px;
 }
 
 .menu-footer-social li a {
@@ -1693,8 +1695,20 @@ button.acces span.slide-top {
 	min-height: 41vh;
 }
 
-#slider .orbit .orbit-image {
-	height: 450px;
+
+
+@media screen and (min-width:1024px) {
+	#slider .orbit .orbit-image {
+		height: 450px;
+	}
+}
+
+@media screen and (min-width:480px) {
+	#slider .orbit-caption {
+		bottom: 15%;
+		left: 10%;
+		font-size: 1.5em;
+	}
 }
 
 /*Assombrir images des sliders au survol - effet appliqué à tous les sliders*/
@@ -1706,10 +1720,7 @@ button.acces span.slide-top {
 
 #slider .orbit-caption {
 	background-color: transparent;
-	bottom: 15%;
-	left: 10%;
 	font-family: 'MuseoSansDisplay', sans-serif;
-	font-size: 1.5em;
 	font-weight: 300;
 	width: unset;
 }
